# Sira_Testprojekt

./: .gitignore  README.md  init.sh  pyproject.toml
data/: README.md
notebooks/: example.ipynb
scripts/: Test_pushdatei.txt  example.py
src/project/: utils.py
tests/: test_utils.py
