[project]
name = "project"
version = "0.1.0"
description = "Kurzbeschreibung des Projekts"
requires-python = ">=3.11"

dependencies = [
    "ipykernel>=7.2.0",
    "numpy",
    "pandas",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/project"]
